<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>io.clinicalresearch</groupId>
	<artifactId>jib-layer-with-modification-time-extension-maven</artifactId>
	<version>1.0.1-java8</version>
	<packaging>jar</packaging>

	<name>JIB Layer With Modification Time Extension - Maven plugin</name>

	<description>
		JIB extension for creating a layer that has modification time set for all files within it.
	</description>

	<organization>
		<name>Infobip Ltd.</name>
		<url>https://www.infobip.com/</url>
	</organization>

	<url>https://github.com/infobip/jib-layer-with-modification-time-extension-maven</url>

	<licenses>
		<license>
			<name>Apache License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
			<comments>A business-friendly OSS license</comments>
		</license>
	</licenses>

	<developers>
		<developer>
			<id>tstavinoha</id>
			<name>Tin Stavinoha</name>
			<email>tin.stavinoha@infobip.com</email>
			<organization>Infobip Ltd.</organization>
		</developer>
	</developers>

	<scm>
		<url>https://github.com/infobip/jib-layer-with-modification-time-extension-maven.git</url>
		<connection>scm:git:git://github.com:infobip/jib-layer-with-modification-time-extension-maven.git</connection>
		<developerConnection>
			scm:git:git@github.com:infobip/jib-layer-with-modification-time-extension-maven.git
		</developerConnection>
		<tag>jib-layer-with-modification-time-extension-maven-1.0.1</tag>
	</scm>

	<properties>
		<!-- DEPENDENCY VERSIONS-->
		<spring-boot.version>2.4.3</spring-boot.version>
		<jib-maven-plugin-extension-api.version>0.4.0</jib-maven-plugin-extension-api.version>

		<!-- BUILD DEPENDENCIES-->
		<java.version>8</java.version>
		<maven-surefire-plugin.version>2.22.0</maven-surefire-plugin.version>
		<jacoco-maven-plugin.version>0.8.5</jacoco-maven-plugin.version>
		<coveralls-maven-plugin.version>4.3.0</coveralls-maven-plugin.version>
		<maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<!-- SPRING BOM -->
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-dependencies</artifactId>
				<version>${spring-boot.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>com.google.cloud.tools</groupId>
			<artifactId>jib-maven-plugin-extension-api</artifactId>
			<version>${jib-maven-plugin-extension-api.version}</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.assertj</groupId>
			<artifactId>assertj-core</artifactId>
			<scope>test</scope>
		</dependency>

	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${maven-surefire-plugin.version}</version>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>${jacoco-maven-plugin.version}</version>
				<executions>
					<execution>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>report</id>
						<phase>test</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.eluder.coveralls</groupId>
				<artifactId>coveralls-maven-plugin</artifactId>
				<version>${coveralls-maven-plugin.version}</version>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>release-sign-artifacts</id>
			<activation>
				<property>
					<name>performRelease</name>
					<value>true</value>
				</property>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>${maven-gpg-plugin.version}</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>
